--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,4 +1,6 @@
 {
-  "accentColor": "",
-  "theme": "moonstone"
+  "accentColor": "#5849d0",
+  "theme": "moonstone",
+  "cssTheme": "",
+  "interfaceFontFamily": ""
 }
